--- a/service-details.html
+++ b/service-details.html
@@ -6,7 +6,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Service Details - JLucus.Dev</title>
   <meta content="Jesse Lucus's Developer Portfolio Website" name="description">
-  <meta content="Web3 Full Stack Engineer, Blockchain Developer, Decentralized Applications (dApps), Solidity Programming, Ethereum Development, Smart Contracts, React.js, Node.js, IPFS, Truffle Suite, Metamask Integration, Decentralized Finance (DeFi), NFT Development, Cryptocurrency, Hyperledger Fabric, Web Development, Front-End Development, Back-End Development, Full-Stack Development, JavaScript, Python, Rust Programming, Cryptographic Protocols, Distributed Systems, Consensus Algorithms" name="keywords">
+  <meta
+    content="Web3 Full Stack Engineer, Blockchain Developer, Decentralized Applications (dApps), Solidity Programming, Ethereum Development, Smart Contracts, React.js, Node.js, IPFS, Truffle Suite, Metamask Integration, Decentralized Finance (DeFi), NFT Development, Cryptocurrency, Hyperledger Fabric, Web Development, Front-End Development, Back-End Development, Full-Stack Development, JavaScript, Python, Rust Programming, Cryptographic Protocols, Distributed Systems, Consensus Algorithms"
+    name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -15,7 +17,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -50,7 +54,8 @@
       <a href="https://t.me/gambaboost" class="telegram"><i class="bi bi-telegram"></i></a>
       <a href="https://instagram.com/sup1tsj" class="instagram"><i class="bi bi-instagram"></i></a>
       <a href="https://linkedin.com/in/supitsj" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      <a href="https://open.spotify.com/artist/6bVpULP5vWYroGU1OU6B6e?si=A-M9N7sLRS2D4A6JdQu82w" class="spotify"><i class="bi bi-spotify"></i></a>
+      <a href="https://open.spotify.com/artist/6bVpULP5vWYroGU1OU6B6e?si=A-M9N7sLRS2D4A6JdQu82w" class="spotify"><i
+          class="bi bi-spotify"></i></a>
       <a href="https://x.com/Jandrew_Tate" class="twitter"><i class="bi bi-twitter-x"></i></a>
       <a href="https://youtube/supitsj" class="youtube"><i class="bi bi-youtube"></i></a>
     </div>
@@ -77,7 +82,9 @@
           </li>
           <li class="dropdown"><a href="#"><span>Art</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/50889978232764380064571408061711906181139155941549913401944503337942180167681">CAYC: Prison Queen</a></li>
+              <li><a
+                  href="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/50889978232764380064571408061711906181139155941549913401944503337942180167681">CAYC:
+                  Prison Queen</a></li>
               <li><a href="https://cayc-cases-web.vercel.app">CYAC Cases Concept</a></li>
             </ul>
           </li>
@@ -113,11 +120,10 @@
 
     <!-- Service Details Section -->
     <section id="service-details" class="service-details section">
-
       <div class="container">
-
         <div class="row gy-4">
 
+          <!-- Services Navigation -->
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
               <a href="#webdesign" class="active">Web Design</a>
@@ -126,60 +132,146 @@
               <a href="#graphic">Graphic Design</a>
               <a href="#marketing">Marketing</a>
             </div>
-
-            <section id="service-details" class="#webdesign">
-            <h4>Web Design</h4>
-            <p>We're serious about User Experience!</p>
           </div>
 
-          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Happy Brand Image = Unforgettable Brand</h3>
-            <p>
-              It is no suprise that positive vibes have higher retention with brand audiences.
-            </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>User Experience or UI/UX Design is the science of user interactions.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Companies who spent time studying user engagements report much higher retention.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Sentiment analysis can save countless hours at scale.</span></li>
-            </ul>
-            <p>
-              Several tools are available for sentiment analysis, including MonkeyLearn, Lexalytics, and Hootsuite. These platforms, along with Userlytics' AI sentiment analysis tool, help businesses interpret user sentiment across digital experiences. Tools like Userlytics integrate sentiment analysis directly into user testing platforms, making it easier to gather valuable insights.
-            </p>
-            <p>
-              sentiment analysis helps companies save time and resources by automating the emotional analysis of user feedback. Tools like Userlytics provide quick, actionable insights, enabling businesses to enhance the user experience more efficiently. 
-            </p>
-          </div>
+          <!-- Service Content -->
+          <div class="col-lg-8">
+            <!-- Web Design Content -->
+            <div id="webdesign" class="service-content active" data-aos="fade-up" data-aos-delay="200">
+              <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
+              <h3>Happy Brand Image = Unforgettable Brand</h3>
+              <p>It is no suprise that positive vibes have higher retention with brand audiences.</p>
+              <ul>
+                <li><i class="bi bi-check-circle"></i> <span>User Experience or UI/UX Design is the science of user
+                    interactions.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Companies who spent time studying user engagements report
+                    much higher retention.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Sentiment analysis can save countless hours at
+                    scale.</span></li>
+              </ul>
+              <p>Several tools are available for sentiment analysis, including MonkeyLearn, Lexalytics, and Hootsuite.
+                These platforms, along with Userlytics' AI sentiment analysis tool, help businesses interpret user
+                sentiment across digital experiences.</p>
+              <p>Sentiment analysis helps companies save time and resources by automating the emotional analysis of user
+                feedback.</p>
+            </div>
 
-          <section id="service-details" class="#development">
-            <h4>Software Development</h4>
-            <p>We create the tools you need to succeed!</p>
-          </div>
+            <!-- Software Development Content -->
+            <div id="development" class="service-content" data-aos="fade-up" data-aos-delay="200">
+              <img src="assets/img/services2.jpg" alt="" class="img-fluid services-img">
+              <h3>Software Development Solutions</h3>
+              <p>We create the tools you need to succeed!</p>
+              <ul>
+                <li><i class="bi bi-check-circle"></i> <span>Custom application development</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>API integration services</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Cloud-native solutions</span></li>
+              </ul>
+              <p>Full-cycle software development from concept to deployment.</p>
+              <p>Agile development methodologies ensure timely delivery.</p>
+            </div>
 
-          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Lore Ipsum</h3>
-            <p>
-              Lore Ipsum Lore Ipsum Lore Ipsum Lore Ipsum Lore Ipsum Lore Ipsum Lore Ipsum Lore Ipsum Lore Ipsum.
-            </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Lore Ipsum.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Lore Ipsum.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Lore Ipsum.</span></li>
-            </ul>
-            <p>
-              Lore Ipsum.
-            </p>
-            <p>
-              Lore Ipsum. 
-            </p>
+            <!-- Add other service content blocks here -->
+            <!-- Product Management Content -->
+            <div id="product" class="service-content" data-aos="fade-up" data-aos-delay="200">
+              <img src="assets/img/services3.jpg" alt="Product strategy meeting" class="img-fluid services-img">
+              <h3>Strategic Product Leadership</h3>
+              <p>From concept to market dominance - we architect success.</p>
+              <ul>
+                <li><i class="bi bi-check-circle"></i> <span>Market validation & MVP development strategies</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Roadmap prioritization using RICE scoring</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Cross-functional team alignment & OKR development</span>
+                </li>
+              </ul>
+              <p>Our product managers bridge technical feasibility with market demands through continuous discovery
+                frameworks. We implement evidence-based decision making using Pendo analytics and Amplitude tracking.
+              </p>
+              <p>Through agile release trains and sprint retrospectives, we maintain 92% feature adoption rates across
+                client portfolios.</p>
+            </div>
+
+            <!-- Graphic Design Content -->
+            <div id="graphic" class="service-content" data-aos="fade-up" data-aos-delay="200">
+              <img src="assets/img/services4.jpg" alt="Design workstation" class="img-fluid services-img">
+              <h3>Visual Storytelling That Converts</h3>
+              <p>Where aesthetics meet business objectives.</p>
+              <ul>
+                <li><i class="bi bi-check-circle"></i> <span>Brand identity systems & style guides</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Data visualization & infographic design</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>UX-focused interface elements & iconography</span></li>
+              </ul>
+              <p>Our design team specializes in conversion-centered design principles, combining Gestalt psychology with
+                A/B tested layouts. We deliver pixel-perfect assets optimized for multi-platform use.</p>
+              <p>All deliverables include source files and export presets for development teams, ensuring 1:1
+                implementation fidelity.</p>
+            </div>
+
+            <!-- Marketing Content -->
+            <div id="marketing" class="service-content" data-aos="fade-up" data-aos-delay="200">
+              <img src="assets/img/services5.jpg" alt="Marketing analytics dashboard" class="img-fluid services-img">
+              <h3>Full-Funnel Growth Engineering</h3>
+              <p>We don't just generate leads - we build demand engines.</p>
+              <ul>
+                <li><i class="bi bi-check-circle"></i> <span>Technical SEO & schema markup implementation</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Performance marketing with GA4 integration</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Account-based marketing automation</span></li>
+              </ul>
+              <p>Our growth stack combines Marketo automation with Clearbit enrichment, driving average 3.2x ROAS for
+                SaaS clients.</p>
+              <p>We specialize in developer-focused marketing: technical content clusters, API documentation
+                optimization, and community-led growth strategies.</p>
+            </div>
           </div>
 
         </div>
-
       </div>
-
     </section><!-- /Service Details Section -->
+
+    <style>
+      .services-list a {
+        display: block;
+        padding: 15px;
+        margin: 5px 0;
+        border-radius: 5px;
+        transition: all 0.3s ease;
+      }
+
+      .services-list a.active {
+        background: #f3f6f9;
+        color: #106eea;
+      }
+
+      .service-content {
+        display: none;
+      }
+
+      .service-content.active {
+        display: block;
+      }
+    </style>
+
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        // Handle service navigation
+        document.querySelectorAll('.services-list a').forEach(link => {
+          link.addEventListener('click', function (e) {
+            e.preventDefault();
+            const targetId = this.getAttribute('href').substring(1);
+
+            // Remove active class from all
+            document.querySelectorAll('.services-list a, .service-content').forEach(el => {
+              el.classList.remove('active');
+            });
+
+            // Add active class to clicked element and target content
+            this.classList.add('active');
+            document.getElementById(targetId).classList.add('active');
+          });
+        });
+
+        // Activate first service by default
+        document.querySelector('.services-list a:first-child').click();
+      });
+    </script>
 
   </main>
 
@@ -187,17 +279,20 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">JLucus.Dev</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">JLucus.Dev</strong> <span>All Rights Reserved</span>
+        </p>
       </div>
       <div class="credits">
-        Designed by <a href="https://jlucus.dev/">jlucus.dev with </a><p>❤️ in the Bay Area.</p>
+        Designed by <a href="https://jlucus.dev/">jlucus.dev with </a>
+        <p>❤️ in the Bay Area.</p>
       </div>
     </div>
 
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
