--- a/service-details.html
+++ b/service-details.html
@@ -30,6 +30,19 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/68012f1aea5f5e190c34a579/1ip29vvpc';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 </head>
 
 <body class="service-details-page">
@@ -54,8 +67,7 @@
       <a href="https://t.me/gambaboost" class="telegram"><i class="bi bi-telegram"></i></a>
       <a href="https://instagram.com/sup1tsj" class="instagram"><i class="bi bi-instagram"></i></a>
       <a href="https://linkedin.com/in/supitsj" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      <a href="https://open.spotify.com/artist/6bVpULP5vWYroGU1OU6B6e?si=A-M9N7sLRS2D4A6JdQu82w" class="spotify"><i
-          class="bi bi-spotify"></i></a>
+      <a href="https://open.spotify.com/artist/6bVpULP5vWYroGU1OU6B6e?si=A-M9N7sLRS2D4A6JdQu82w" class="spotify"><i class="bi bi-spotify"></i></a>
       <a href="https://x.com/Jandrew_Tate" class="twitter"><i class="bi bi-twitter-x"></i></a>
       <a href="https://youtube/supitsj" class="youtube"><i class="bi bi-youtube"></i></a>
     </div>
