--- a/index.html
+++ b/index.html
@@ -627,6 +627,8 @@
         <!-- Testimonial Items -->
         <div class="testimonials-item active">
           <p class="testimonials-text">Santosh Kalwar: "Coding like poetry should be short and concise."</p>
+          <p> 
+            Santosh Kalwar is a Doctor of Science in Technology (Human-computer Interaction), an entrepreneur, a software/web developer, writer/author, poet, and above all, a simple human being.</p>
           <img src="img/testimonials/santosh-kalwar.jpg" alt="Santosh Kalwar" class="testimonials-image">
           <div class="testimonials-name">Santosh Kalwar</div>
         </div>
@@ -639,12 +641,14 @@
     
         <div class="testimonials-item">
           <p class="testimonials-text">Robert C. Martin: "Of course, bad code can be cleaned up. But it’s very expensive."</p>
+          <p> Uncle Bob or Robert Martin, is an American software engineer, instructor, and author. He is most recognized for promoting many software design principles and for being an author and signatory of the influential Agile Manifesto.</p>
           <img src="img/testimonials/robert-martin.jpg" alt="Robert C. Martin" class="testimonials-image">
           <div class="testimonials-name">Robert C. Martin</div>
         </div>
     
         <div class="testimonials-item">
           <p class="testimonials-text">Linus Torvalds: "Software is like sex: it’s better when it’s free."</p>
+          <p> Linus Torvalds is a Finnish software engineer who is the creator and lead developer of the Linux kernel. He also created the distributed version control system Git.</p>
           <img src="img/testimonials/linus-torvalds.jpg" alt="Linus Torvalds" class="testimonials-image">
           <div class="testimonials-name">Linus Torvalds</div>
         </div>
