--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
         <div class="testimonials-item">
           <p class="testimonials-text">Linus Torvalds: "Software is like sex: it’s better when it’s free."</p>
           <p> Linus Torvalds is a Finnish software engineer who is the creator and lead developer of the Linux kernel. He also created the distributed version control system Git.</p>
-          <img src="img/testimonials/linus-torvalds.jpg" alt="Linus Torvalds" class="testimonials-image">
+          <img src="img/testimonials/linus-torvalds.jpeg" alt="Linus Torvalds" class="testimonials-image">
           <div class="testimonials-name">Linus Torvalds</div>
         </div>
       </div>
