--- a/index.html
+++ b/index.html
@@ -330,6 +330,21 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
+        <button class="download-button" id="resume-download">
+          <i class="fas fa-download"></i> Download Resume (PDF)
+        </button>
+        
+        <script>
+        document.getElementById('resume-download').addEventListener('click', function() {
+          const link = document.createElement('a');
+          link.href = '/src/assets/jlucusdev.pdf';
+          link.download = 'jlucusdev-resume.pdf';
+          document.body.appendChild(link);
+          link.click();
+          document.body.removeChild(link);
+        });
+        </script>
+        
         <p>I am fortunate that I get to create and work in a field that changes quickly, while placing me at the front
           of innovations where I can allow the world to see the impact of my work. I consider myself both an artist, and
           a scientist, with a methodical approach at solving problems while making them look great, too!</p>
