--- a/index.html
+++ b/index.html
@@ -338,13 +338,13 @@
         document.getElementById('resume-download').addEventListener('click', function() {
           const link = document.createElement('a');
           link.href = '/src/assets/jlucusdev.pdf';
-          link.download = 'jlucusdev-resume.pdf';
+          link.download = 'jlucusdev.pdf';
           document.body.appendChild(link);
           link.click();
           document.body.removeChild(link);
         });
         </script>
-        
+
         <p>I am fortunate that I get to create and work in a field that changes quickly, while placing me at the front
           of innovations where I can allow the world to see the impact of my work. I consider myself both an artist, and
           a scientist, with a methodical approach at solving problems while making them look great, too!</p>
