--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
         <script>
         document.getElementById('resume-download').addEventListener('click', function() {
           const link = document.createElement('a');
-          link.href = '/src/assets/jlucusdev.pdf';
-          link.download = 'jlucusdev.pdf';
+          link.href = '/assets/jlucusdev.pdf';
+          link.download = '/assets/jlucusdev.pdf';
           document.body.appendChild(link);
           link.click();
           document.body.removeChild(link);
