--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
               </ul>
               <p><b>Technologies:</b> C#, Javascript, SQL, Powershell, bash, data analaysis, reporting and knowledge
                 base development. </p>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
 
           </div>
 
