--- a/service-details.html
+++ b/service-details.html
@@ -31,16 +31,16 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
   <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-  (function(){
-  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-  s1.async=true;
-  s1.src='https://embed.tawk.to/68012f1aea5f5e190c34a579/1ip29vvpc';
-  s1.charset='UTF-8';
-  s1.setAttribute('crossorigin','*');
-  s0.parentNode.insertBefore(s1,s0);
-  })();
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/68012f1aea5f5e190c34a579/1ip29vvpc';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
   </script>
   <!--End of Tawk.to Script-->
 </head>
@@ -67,7 +67,8 @@
       <a href="https://t.me/gambaboost" class="telegram"><i class="bi bi-telegram"></i></a>
       <a href="https://instagram.com/sup1tsj" class="instagram"><i class="bi bi-instagram"></i></a>
       <a href="https://linkedin.com/in/supitsj" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      <a href="https://open.spotify.com/artist/6bVpULP5vWYroGU1OU6B6e?si=A-M9N7sLRS2D4A6JdQu82w" class="spotify"><i class="bi bi-spotify"></i></a>
+      <a href="https://open.spotify.com/artist/6bVpULP5vWYroGU1OU6B6e?si=A-M9N7sLRS2D4A6JdQu82w" class="spotify"><i
+          class="bi bi-spotify"></i></a>
       <a href="https://x.com/Jandrew_Tate" class="twitter"><i class="bi bi-twitter-x"></i></a>
       <a href="https://youtube/supitsj" class="youtube"><i class="bi bi-youtube"></i></a>
     </div>
@@ -143,6 +144,7 @@
               <a href="#product">Product Management</a>
               <a href="#graphic">Graphic Design</a>
               <a href="#marketing">Marketing</a>
+              <a href="#web3">Web 3.0 Champions</a>
             </div>
           </div>
 
@@ -174,24 +176,23 @@
               <h3>Software Development Solutions</h3>
               <p>We create the tools you need to succeed!</p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> <span>Custom application development</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>API integration services</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Cloud-native solutions</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Custom application development.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>API integration services.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Cloud-native solutions.</span></li>
               </ul>
               <p>Full-cycle software development from concept to deployment.</p>
               <p>Agile development methodologies ensure timely delivery.</p>
             </div>
 
-            <!-- Add other service content blocks here -->
             <!-- Product Management Content -->
             <div id="product" class="service-content" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/services3.jpg" alt="Product strategy meeting" class="img-fluid services-img">
               <h3>Strategic Product Leadership</h3>
               <p>From concept to market dominance - we architect success.</p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> <span>Market validation & MVP development strategies</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Roadmap prioritization using RICE scoring</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Cross-functional team alignment & OKR development</span>
+                <li><i class="bi bi-check-circle"></i> <span>Market validation & MVP development strategies.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Roadmap prioritization using RICE scoring.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Cross-functional team alignment & OKR development.</span>
                 </li>
               </ul>
               <p>Our product managers bridge technical feasibility with market demands through continuous discovery
@@ -207,9 +208,9 @@
               <h3>Visual Storytelling That Converts</h3>
               <p>Where aesthetics meet business objectives.</p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> <span>Brand identity systems & style guides</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Data visualization & infographic design</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>UX-focused interface elements & iconography</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Brand identity systems & style guides.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Data visualization & infographic design.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>UX-focused interface elements & iconography.</span></li>
               </ul>
               <p>Our design team specializes in conversion-centered design principles, combining Gestalt psychology with
                 A/B tested layouts. We deliver pixel-perfect assets optimized for multi-platform use.</p>
@@ -223,14 +224,82 @@
               <h3>Full-Funnel Growth Engineering</h3>
               <p>We don't just generate leads - we build demand engines.</p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> <span>Technical SEO & schema markup implementation</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Performance marketing with GA4 integration</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Account-based marketing automation</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Technical SEO & schema markup implementation.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Performance marketing with GA4 integration.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Account-based marketing automation.</span></li>
               </ul>
               <p>Our growth stack combines Marketo automation with Clearbit enrichment, driving average 3.2x ROAS for
                 SaaS clients.</p>
               <p>We specialize in developer-focused marketing: technical content clusters, API documentation
                 optimization, and community-led growth strategies.</p>
+            </div>
+
+            <!-- Web 3 Champions -->
+            <div id="web3" class="service-content" data-aos="fade-up" data-aos-delay="200">
+              <img src="/assets/img/testimonials/web3.png" alt="Web 3.0 Champions"
+                class="img-fluid services-img">
+              <h3>Web3 3.0 Champions</h3>
+              <p class="lead">Building the decentralized future with enterprise-grade blockchain solutions.</p>
+
+              <div class="web3-specialties">
+                <ul>
+                  <li><i class="bi bi-shield-check"></i>
+                    <span class="fw-bold">Smart Contract Development:</span>
+                    <span class="text-muted">ERC-20/721/1155 standards with formal verification using Hardhat &
+                      Foundry.</span>
+                  </li>
+                  <li><i class="bi bi-cpu"></i>
+                    <span class="fw-bold">dApp Architecture:</span>
+                    <span class="text-muted">React-based frontends with Ethers.js/web3.js and Node.js backends.</span>
+                  </li>
+                  <li><i class="bi bi-diagram-3"></i>
+                    <span class="fw-bold">Blockchain Integration:</span>
+                    <span class="text-muted">Enterprise API gateways for Ethereum/Polygon with 98.9% uptime SLA.</span>
+                  </li>
+                  <li><i class="bi bi-wallet2"></i>
+                    <span class="fw-bold">DeFi Solutions:</span>
+                    <span class="text-muted">AMM development, liquidity pool strategies, and yield optimization.</span>
+                  </li>
+                  <li><i class="bi bi-safe"></i>
+                    <span class="fw-bold">Security Audits:</span>
+                    <span class="text-muted">MythX-powered analysis with CertiK certification support.</span>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="web3-impact mt-4">
+                <h4>Recent Web3 Milestones</h4>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="achievement-card">
+                      <div class="achievement-number">2.4M+</div>
+                      <div class="achievement-text">Daily transactions processed.</div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="achievement-card">
+                      <div class="achievement-number">97%</div>
+                      <div class="achievement-text">Audit pass rate first time independent reviews across 20+ contracts.</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="web3-tech-stack mt-5">
+                <h4>Core Technology Stack</h4>
+                <div class="tech-badges">
+                  <span class="badge bg-dark">Solidity 0.8+</span>
+                  <span class="badge bg-primary">IPFS</span>
+                  <span class="badge bg-success">Graph Protocol</span>
+                  <span class="badge bg-danger">Chainlink Oracles</span>
+                  <span class="badge bg-warning">Zero-Knowledge Proofs</span>
+                </div>
+              </div>
+
+              <div class="cta-section mt-5">
+                <p class="text-muted">Featured in Web3 Innovation Awards 2023 | Partnered with ChainSafe and OpenZeppelin.</p>
+                <button class="btn btn-outline-primary">Free Consultation</button>
+              </div>
             </div>
           </div>
 
