--- a/service-details.html
+++ b/service-details.html
@@ -75,11 +75,11 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
+        <li><a href="https://jlucus.dev/#home" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="https://jlucus.dev/#about"><i class="bi bi-person navicon"></i> About</a></li>
+        <li><a href="https://jlucus.dev/#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
+        <li><a href="https://jlucus.dev/#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+        <li><a href="https://jlucus.dev/#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
       </ul>
       <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Ventures+</span> <i
             class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -239,13 +239,13 @@
               <img src="/assets/img/testimonials/web3.png" alt="Web 3.0 Champions"
                 class="img-fluid services-img">
               <h3>Web3 3.0 Champions</h3>
-              <p class="lead">Building the decentralized future with enterprise-grade blockchain solutions.</p>
+              <p class="lead">Building the decentralized future with enterprise-grade blockchain solutions, and modern security protocols.</p>
 
               <div class="web3-specialties">
                 <ul>
                   <li><i class="bi bi-shield-check"></i>
                     <span class="fw-bold">Smart Contract Development:</span>
-                    <span class="text-muted">ERC-20/721/1155 standards with formal verification using Hardhat &
+                    <span class="text-muted">ERC-20/721/1155 and beyond, using standards with formal verification with Hardhat &
                       Foundry.</span>
                   </li>
                   <li><i class="bi bi-cpu"></i>
@@ -272,14 +272,12 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="achievement-card">
-                      <div class="achievement-number">2.4M+</div>
-                      <div class="achievement-text">Daily transactions processed.</div>
+                      <div class="achievement-number">2.4M+ Monthly transactions processed.</div>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="achievement-card">
-                      <div class="achievement-number">97%</div>
-                      <div class="achievement-text">Audit pass rate first time independent reviews across 20+ contracts.</div>
+                      <div class="achievement-number">97% Audit pass rate first time independent reviews across 20+ contracts.</div>
                     </div>
                   </div>
                 </div>
@@ -297,7 +295,7 @@
               </div>
 
               <div class="cta-section mt-5">
-                <p class="text-muted">Featured in Web3 Innovation Awards 2023 | Partnered with ChainSafe and OpenZeppelin.</p>
+                <p class="text-muted">Featured Web3 Innovation | Open Sourced</p>
                 <button class="btn btn-outline-primary">Free Consultation</button>
               </div>
             </div>
