--- a/index.html
+++ b/index.html
@@ -72,23 +72,22 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home </a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> About </a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume </a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio </a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services </a></li>
+        <li><a href="https://jlucus.dev/#home" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="https://jlucus.dev/#about"><i class="bi bi-person navicon"></i> About</a></li>
+        <li><a href="https://jlucus.dev/#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
+        <li><a href="https://jlucus.dev/#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+        <li><a href="https://jlucus.dev/#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
       </ul>
       <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span> Ventures+ </span> <i
             class="bi bi-chevron-down toggle-dropdown"></i></a>
         <ul>
-          <li class="dropdown"><a href="#"><span>Fused Gaming </span> <i
+          <li class="dropdown"><a href="https://fused.gg"><span>Fused Gaming </span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="https://fused.gg">Fused.gg </a></li>
               <li><a href="https://leaderboards.vip">Leaderboards.vip </a></li>
               <li><a href="https://lacroixla.com">Lacroixla.com </a></li>
               <li><a href="https://cleanswipe.tv">Cleanswipe.tv </a></li>
-              <li><a href="https://TBD.gg">Britanycorp </a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Art </span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
