--- a/service-details.html
+++ b/service-details.html
@@ -168,21 +168,32 @@
                 sentiment across digital experiences.</p>
               <p>Sentiment analysis helps companies save time and resources by automating the emotional analysis of user
                 feedback.</p>
+                <div class="mt-4">
+                  <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation">
+                    <i class="bi bi-calendar-check me-2"></i>Web Consultation</a>
+                  </div>
+                </div>
             </div>
 
             <!-- Software Development Content -->
             <div id="development" class="service-content" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/services2.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/services2.jpg" alt="Software development workflow" class="img-fluid services-img">
               <h3>Software Development Solutions</h3>
               <p>We create the tools you need to succeed!</p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> <span>Custom application development.</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>API integration services.</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Cloud-native solutions.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Custom application development</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>API integration services</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Cloud-native solutions</span></li>
               </ul>
               <p>Full-cycle software development from concept to deployment.</p>
               <p>Agile development methodologies ensure timely delivery.</p>
-            </div>
+
+              <!-- Calendly Booking Button -->
+              <div class="mt-4">
+                <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation">
+                  <i class="bi bi-calendar-check me-2"></i>Software Consultation</a>
+                </div>
+              </div>
 
             <!-- Product Management Content -->
             <div id="product" class="service-content" data-aos="fade-up" data-aos-delay="200">
@@ -200,6 +211,12 @@
               </p>
               <p>Through agile release trains and sprint retrospectives, we maintain 92% feature adoption rates across
                 client portfolios.</p>
+              <!-- Calendly Booking Button -->
+              <div class="mt-4">
+                <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation">
+                  <i class="bi bi-calendar-check me-2"></i>Product Consultation</a>
+                </div>
+              </div>
             </div>
 
             <!-- Graphic Design Content -->
@@ -216,6 +233,11 @@
                 A/B tested layouts. We deliver pixel-perfect assets optimized for multi-platform use.</p>
               <p>All deliverables include source files and export presets for development teams, ensuring 1:1
                 implementation fidelity.</p>
+                <div class="mt-4">
+                  <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation">
+                    <i class="bi bi-calendar-check me-2"></i>Branding Consultation</a>
+                  </div>
+                </div>
             </div>
 
             <!-- Marketing Content -->
@@ -233,20 +255,24 @@
               <p>We specialize in developer-focused marketing: technical content clusters, API documentation
                 optimization, and community-led growth strategies.</p>
             </div>
+            <div class="mt-4">
+              <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation">
+                <i class="bi bi-calendar-check me-2"></i>Marketing Consultation</a>
+              </div>
+            </div>
 
             <!-- Web 3 Champions -->
             <div id="web3" class="service-content" data-aos="fade-up" data-aos-delay="200">
-              <img src="/assets/img/testimonials/web3.png" alt="Web 3.0 Champions"
-                class="img-fluid services-img">
+              <img src="/assets/img/testimonials/web3.png" alt="Web 3.0 Champions" class="img-fluid services-img">
               <h3>Web3 3.0 Champions</h3>
-              <p class="lead">Building the decentralized future with enterprise-grade blockchain solutions, and modern security protocols.</p>
+              <p class="lead">Building the decentralized future with enterprise-grade blockchain solutions, and modern
+                security protocols.</p>
 
               <div class="web3-specialties">
                 <ul>
                   <li><i class="bi bi-shield-check"></i>
                     <span class="fw-bold">Smart Contract Development:</span>
-                    <span class="text-muted">ERC-20/721/1155 and beyond, using standards with formal verification with Hardhat &
-                      Foundry.</span>
+                    <span class="text-muted">ERC-20/721/1155 and beyond - verification with Hardhat & Foundry.</span>
                   </li>
                   <li><i class="bi bi-cpu"></i>
                     <span class="fw-bold">dApp Architecture:</span>
@@ -277,7 +303,8 @@
                   </div>
                   <div class="col-md-6">
                     <div class="achievement-card">
-                      <div class="achievement-number">97% Audit pass rate first time independent reviews across 20+ contracts.</div>
+                      <div class="achievement-number">97% Audit pass rate first time independent reviews across 20+
+                        contracts.</div>
                     </div>
                   </div>
                 </div>
@@ -296,7 +323,11 @@
 
               <div class="cta-section mt-5">
                 <p class="text-muted">Featured Web3 Innovation | Open Sourced</p>
-                <button class="btn btn-outline-primary">Free Consultation</button>
+                <div class="mt-4">
+                  <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation">
+                    <i class="bi bi-calendar-check me-2"></i>Web 3.0 Consultation</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
