--- a/service-details.html
+++ b/service-details.html
@@ -169,7 +169,7 @@
               <p>Sentiment analysis helps companies save time and resources by automating the emotional analysis of user
                 feedback.</p>
                 <div class="mt-4">
-                  <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation">
+                  <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Web development consultation">
                     <i class="bi bi-calendar-check me-2"></i>Web Consultation</a>
                   </div>
                 </div>
@@ -213,7 +213,7 @@
                 client portfolios.</p>
               <!-- Calendly Booking Button -->
               <div class="mt-4">
-                <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation">
+                <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Product consultation">
                   <i class="bi bi-calendar-check me-2"></i>Product Consultation</a>
                 </div>
               </div>
@@ -234,7 +234,7 @@
               <p>All deliverables include source files and export presets for development teams, ensuring 1:1
                 implementation fidelity.</p>
                 <div class="mt-4">
-                  <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation">
+                  <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Branding consultation">
                     <i class="bi bi-calendar-check me-2"></i>Branding Consultation</a>
                   </div>
                 </div>
@@ -254,10 +254,10 @@
                 SaaS clients.</p>
               <p>We specialize in developer-focused marketing: technical content clusters, API documentation
                 optimization, and community-led growth strategies.</p>
-            </div>
-            <div class="mt-4">
-              <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation">
-                <i class="bi bi-calendar-check me-2"></i>Marketing Consultation</a>
+                <div class="mt-4">
+                  <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Marketing consultation">
+                    <i class="bi bi-calendar-check me-2"></i>Marketing Consultation</a>
+                  </div>
               </div>
             </div>
 
@@ -324,17 +324,18 @@
               <div class="cta-section mt-5">
                 <p class="text-muted">Featured Web3 Innovation | Open Sourced</p>
                 <div class="mt-4">
-                  <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation">
+                  <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Web3 consultation">
                     <i class="bi bi-calendar-check me-2"></i>Web 3.0 Consultation</a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-
         </div>
       </div>
-    </section><!-- /Service Details Section -->
+      <!-- Calendly script -->
+       <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+      </section><!-- /Service Details Section -->
 
     <style>
       .services-list a {
