--- a/service-details.html
+++ b/service-details.html
@@ -163,33 +163,47 @@
                 <li><i class="bi bi-check-circle"></i> <span>Sentiment analysis can save countless hours at
                     scale.</span></li>
               </ul>
-              <p>Several tools are available for sentiment analysis, including MonkeyLearn, Lexalytics, and Hootsuite.
-                These platforms, along with Userlytics' AI sentiment analysis tool, help businesses interpret user
-                sentiment across digital experiences.</p>
-              <p>Sentiment analysis helps companies save time and resources by automating the emotional analysis of user
-                feedback.</p>
-                <div class="mt-4">
-                  <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Web development consultation">
-                    <i class="bi bi-calendar-check me-2"></i>Web Consultation</a>
-                  </div>
+
+              <ul>
+                <li>
+                  <p>Several tools are available for sentiment analysis, including MonkeyLearn, Lexalytics, and Hootsuite.
+                    These platforms, along with Userlytics' AI sentiment analysis tool, help businesses interpret user
+                    sentiment across digital experiences.</p>
+                </li>
+                <li>
+                  <p>Sentiment analysis helps companies save time and resources by automating the emotional analysis of user
+                    feedback.</p>
+                </li>
+              </ul>
+              <div class="mt-4">
+                <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Web development consultation">
+                  <i class="bi bi-calendar-check me-2"></i>Web Consultation</a>
                 </div>
+              </div>
             </div><!-- closing -->
 
-            <!-- Software Development Content -->
-            <div id="development" class="service-content" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/services2.jpg" alt="Software development workflow" class="img-fluid services-img">
+            <!-- Software Content -->
+            <div id="development" class="service-content active" data-aos="fade-up" data-aos-delay="200">
+              <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
               <h3>Software Development Solutions</h3>
               <p>We create the tools you need to succeed!</p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> <span>Custom application development</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>API integration services</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Cloud-native solutions</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Custom application development.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>API integration services.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Cloud-native solutions.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Web based applications, hosting, data and payment solutions.</span></li>
               </ul>
-              <p>Full-cycle software development from concept to deployment.</p>
-              <p>Agile development methodologies ensure timely delivery.</p>
+              <ul>
+                <li>
+                  <p>Full-cycle software development from concept to deployment.</p>
+                </li>
+                <li>
+                  <p>Agile development methodologies ensure timely delivery.</p>
+                </li>
+              </ul>
 
-              <!-- Calendly Booking Button -->
-              <div class="mt-4">
+               <!-- Calendly Booking Button -->
+               <div class="mt-4">
                 <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation">
                   <i class="bi bi-calendar-check me-2"></i>Software Consultation</a>
                 </div>
