--- a/service-details.html
+++ b/service-details.html
@@ -176,9 +176,7 @@
                 </li>
               </ul>
               <div class="mt-4">
-                <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Web development consultation">
-                  <i class="bi bi-calendar-check me-2"></i>Web Consultation</a>
-                </div>
+                <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Web development consultation"><i class="bi bi-calendar-check me-2"></i>Web Consultation</a>
               </div>
             </div><!-- closing -->
 
@@ -188,25 +186,17 @@
               <h3>Software Development Solutions</h3>
               <p>We create the tools you need to succeed!</p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> <span>Custom application development.</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>API integration services.</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Cloud-native solutions.</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Web based applications, hosting, data and payment solutions.</span></li>
+                <li><i class="bi bi-check-circle"></i><span>Custom application development.</span></li>
+                <li><i class="bi bi-check-circle"></i><span>API integration services.</span></li>
+                <li><i class="bi bi-check-circle"></i><span>Cloud-native solutions.</span></li>
+                <li><i class="bi bi-check-circle"></i><span>Web based applications, hosting, data and payment solutions.</span></li>
               </ul>
               <ul>
-                <li>
-                  <p>Full-cycle software development from concept to deployment.</p>
-                </li>
-                <li>
-                  <p>Agile development methodologies ensure timely delivery.</p>
-                </li>
+                <li><p>Full-cycle software development from concept to deployment.</p></li>
+                <li><p>Agile development methodologies ensure timely delivery.</p></li>
               </ul>
-
-               <!-- Calendly Booking Button -->
-               <div class="mt-4">
-                <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation">
-                  <i class="bi bi-calendar-check me-2"></i>Software Consultation</a>
-                </div>
+              <!-- Calendly Booking Button -->
+               <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation"><i class="bi bi-calendar-check me-2"></i>Software Consultation</a>
               </div>
             </div><!-- closing -->
 
