--- a/service-details.html
+++ b/service-details.html
@@ -182,7 +182,7 @@
 
             <!-- Software Content -->
             <div id="development" class="service-content active" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/services2.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/services2.png" alt="" class="img-fluid services-img">
               <h3>Software Development Solutions</h3>
               <p>We create the tools you need to succeed!</p>
               <ul>
