--- a/service-details.html
+++ b/service-details.html
@@ -181,8 +181,9 @@
             </div><!-- closing -->
 
             <!-- Software Content -->
+            <div class="col-lg-8">
             <div id="development" class="service-content active" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/services2.png" alt="" class="img-fluid services-img">
+              <img src="assets/img/services2.png" alt="Custom Development Solutions" class="img-fluid services-img">
               <h3>Software Development Solutions</h3>
               <p>We create the tools you need to succeed!</p>
               <ul>
@@ -201,6 +202,7 @@
           </div><!-- closing -->
 
             <!-- Product Management Content -->
+            <div class="col-lg-8">
              <div id="product" class="service-content active" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/services3.jpg" alt="" class="img-fluid services-img">
               <h3>Strategic Product Leadership</h3>
@@ -223,6 +225,7 @@
           </div><!-- closing -->
 
           <!-- Graphic Design -->
+          <div class="col-lg-8">
           <div id="graphic" class="service-content active" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/services4.jpg" alt="" class="img-fluid services-img">
             <h3>Visual Storytelling That Converts</h3>
@@ -244,6 +247,7 @@
 
 
             <!-- Marketing Content -->
+            <div class="col-lg-8">
             <div id="marketing" class="service-content" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/services5.jpg" alt="Marketing analytics dashboard" class="img-fluid services-img">
               <h3>Full-Funnel Growth Engineering</h3>
@@ -263,6 +267,7 @@
           </div><!-- closing -->
 
             <!-- Web3 Content -->
+            <div class="col-lg-8">
             <div id="Web3" class="service-content" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/web3.png" alt="Web 3.0" class="img-fluid services-img">
               <h3>Web3 Development Champions</h3>
