--- a/service-details.html
+++ b/service-details.html
@@ -249,7 +249,7 @@
             <!-- Marketing Content -->
             <div class="col-lg-8">
             <div id="marketing" class="service-content" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/services5.jpg" alt="Marketing analytics dashboard" class="img-fluid services-img">
+              <img src="assets/img/services5.png" alt="Marketing analytics dashboard" class="img-fluid services-img">
               <h3>Full-Funnel Growth Engineering</h3>
               <p>We don't just generate leads - we build demand engines.</p>
             <ul>
